force-app/main/default/objects/Account/fields/A1__c.field-meta.xml
<CustomField>
    <fullName>A1__c</fullName>
    <description>Identify custumer presence to SQM</description>
    <inlineHelpText>The presence of customers at the country, continental or global level?</inlineHelpText>
    <label>A1 - Customer Presence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Continental</fullName>
            </value>
            <value>
                <fullName>Presence in the continent</fullName>
                <isActive>false</isActive>
                <label>Presence in the continent</label>
            </value>
            <value>
                <fullName>Worldwide presence</fullName>
                <isActive>false</isActive>
                <label>Worldwide presence</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>