force-app/main/default/objects/Account/fields/A2__c.field-meta.xml
<CustomField>
    <fullName>A2__c</fullName>
    <inlineHelpText>Understand the negotiation power of the customer.</inlineHelpText>
    <label>A2 - Customer Market Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Big player</fullName>
            </value>
            <value>
                <fullName>Medium player</fullName>
            </value>
            <value>
                <fullName>Local player</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>