force-app/main/default/objects/Account/fields/A3__c.field-meta.xml
<CustomField>
    <fullName>A3__c</fullName>
    <description>End usage of the product.</description>
    <inlineHelpText>End usage of the product.</inlineHelpText>
    <label>A3 - Application</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Application</valueSetName>
    </valueSet>
</CustomField>