force-app/main/default/objects/Account/fields/Accidente_por_pasivos_de_SQM__c.field-meta.xml
<CustomField>
    <fullName>Accidente_por_pasivos_de_SQM__c</fullName>
    <inlineHelpText>Derrumbe vía férrea, muelle o similar</inlineHelpText>
    <label>Accidente por pasivos de SQM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>