force-app/main/default/objects/Account/fields/Accidente_vehiculo_dano_a_persona__c.field-meta.xml
<CustomField>
    <fullName>Accidente_vehiculo_dano_a_persona__c</fullName>
    <label>Accidente vehículo daño a persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>