force-app/main/default/objects/Account/fields/Account_Active_Last_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Account_Active_Last_Transactions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Active Last Transactions</label>
    <type>Checkbox</type>
</CustomField>