force-app/main/default/objects/Account/fields/Account_Date_Last_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Account_Date_Last_Transactions__c</fullName>
    <label>Account Date Last Transactions</label>
    <type>Date</type>
</CustomField>