force-app/main/default/objects/Account/fields/Accounts_Payable_Months__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Payable_Months__c</fullName>
    <label>Accounts Payable Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>