force-app/main/default/objects/Account/fields/Accounts_Receivable_Months__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Receivable_Months__c</fullName>
    <label>Accounts Receivable Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>