force-app/main/default/objects/Account/fields/Afectacion_del_patrimonio_Historico__c.field-meta.xml
<CustomField>
    <fullName>Afectacion_del_patrimonio_Historico__c</fullName>
    <label>Afectación del patrimonio Histórico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>