force-app/main/default/objects/Account/fields/Amount_available__c.field-meta.xml
<CustomField>
    <fullName>Amount_available__c</fullName>
    <label>Amount Available</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>