force-app/main/default/objects/Account/fields/Annual_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Annual_Consumption__c</fullName>
    <inlineHelpText>Estimation of the total yearly demand of the customer, including other suppliers besides SQM</inlineHelpText>
    <label>Annual Consumption</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>