force-app/main/default/objects/Account/fields/B1__c.field-meta.xml
<CustomField>
    <fullName>B1__c</fullName>
    <inlineHelpText>SQM&apos;s share in customer purchases.</inlineHelpText>
    <label>B1 - SQM Share of wallet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;5%</fullName>
            </value>
            <value>
                <fullName>5%-33%</fullName>
            </value>
            <value>
                <fullName>33%-66%</fullName>
            </value>
            <value>
                <fullName>66%-100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>