force-app/main/default/objects/Account/fields/B2__c.field-meta.xml
<CustomField>
    <fullName>B2__c</fullName>
    <inlineHelpText>Is it easy for the customer to change the supplier?</inlineHelpText>
    <label>B2 - Change of supplier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>