force-app/main/default/objects/Account/fields/B3__c.field-meta.xml
<CustomField>
    <fullName>B3__c</fullName>
    <inlineHelpText>How many lithium suppliers has the customer?</inlineHelpText>
    <label>B3 - Number of suppliers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 or more</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>