force-app/main/default/objects/Account/fields/C1__c.field-meta.xml
<CustomField>
    <fullName>C1__c</fullName>
    <inlineHelpText>Identify buyer&apos;s attitude towards SQM</inlineHelpText>
    <label>C1 - Buyer´s attribute towards SQM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>