force-app/main/default/objects/Account/fields/C2__c.field-meta.xml
<CustomField>
    <fullName>C2__c</fullName>
    <inlineHelpText>Is the price the main driver decision?</inlineHelpText>
    <label>C2 - Buyer´s focus on pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>