force-app/main/default/objects/Account/fields/C3__c.field-meta.xml
<CustomField>
    <fullName>C3__c</fullName>
    <inlineHelpText>Identify buyer&apos;s priorities</inlineHelpText>
    <label>C3 - Buyer´s priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price #1 &amp; payment terms #2</fullName>
            </value>
            <value>
                <fullName>Price #1 &amp; Service/Quality/Sust #2</fullName>
            </value>
            <value>
                <fullName>Service/Quality/Sust #1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>