force-app/main/default/objects/Account/fields/CChEN_Status_Form__c.field-meta.xml
<CustomField>
    <fullName>CChEN_Status_Form__c</fullName>
    <formula>Fecha_validez_CChEN__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CChEN Status Form</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>