force-app/main/default/objects/Account/fields/CChEN_Valido__c.field-meta.xml
<CustomField>
    <fullName>CChEN_Valido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CChEN Vigente</label>
    <type>Checkbox</type>
</CustomField>