force-app/main/default/objects/Account/fields/Compliance_Approved_Product__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Approved_Product__c</fullName>
    <label>Compliance Approved Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Iodine</fullName>
            </value>
            <value>
                <fullName>Lithium Carbonate</fullName>
            </value>
            <value>
                <fullName>Lithium Hydroxide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>