force-app/main/default/objects/Account/fields/Contaminacion_al_aire_y_emisiones_de_CO2__c.field-meta.xml
<CustomField>
    <fullName>Contaminacion_al_aire_y_emisiones_de_CO2__c</fullName>
    <label>Contaminación al aire y emisiones de CO2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>