force-app/main/default/objects/Account/fields/Contaminacion_de_la_Tierra__c.field-meta.xml
<CustomField>
    <fullName>Contaminacion_de_la_Tierra__c</fullName>
    <label>Contaminación de la Tierra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>