force-app/main/default/objects/Account/fields/Contribuciones_a_la_Comunidad__c.field-meta.xml
<CustomField>
    <fullName>Contribuciones_a_la_Comunidad__c</fullName>
    <label>Contribuciones a la Comunidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>