force-app/main/default/objects/Account/fields/Contribuciones_por_Contrato_CORFO__c.field-meta.xml
<CustomField>
    <fullName>Contribuciones_por_Contrato_CORFO__c</fullName>
    <label>Contribuciones por Contrato CORFO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>