force-app/main/default/objects/Account/fields/Corte_de_Luz__c.field-meta.xml
<CustomField>
    <fullName>Corte_de_Luz__c</fullName>
    <label>Corte de Luz</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>