force-app/main/default/objects/Account/fields/Corte_del_suministro_de_agua__c.field-meta.xml
<CustomField>
    <fullName>Corte_del_suministro_de_agua__c</fullName>
    <label>Corte del suministro de agua</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>