force-app/main/default/objects/Account/fields/Customer_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_ID__c</fullName>
    <externalId>true</externalId>
    <label>Customer Account ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>