force-app/main/default/objects/Account/fields/Customer_Buyer_Level__c.field-meta.xml
<CustomField>
    <fullName>Customer_Buyer_Level__c</fullName>
    <description>Contact Buyer Level</description>
    <label>Customer Buyer Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Head of Purchases</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>