force-app/main/default/objects/Account/fields/Customer_Buyer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Buyer_Type__c</fullName>
    <description>Buyer Type</description>
    <label>Customer Buyer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generalist</fullName>
            </value>
            <value>
                <fullName>Specific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>