force-app/main/default/objects/Account/fields/Customer_Estimated_Growth__c.field-meta.xml
<CustomField>
    <fullName>Customer_Estimated_Growth__c</fullName>
    <description>Estimated Growth</description>
    <label>Customer Estimated Growth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Decrease</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>