force-app/main/default/objects/Account/fields/Customer_Green__c.field-meta.xml
<CustomField>
    <fullName>Customer_Green__c</fullName>
    <description>Customer Green or not</description>
    <label>Customer Green</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>