force-app/main/default/objects/Account/fields/Customer_Presence__c.field-meta.xml
<CustomField>
    <fullName>Customer_Presence__c</fullName>
    <description>Identify custumer presence to SQM</description>
    <label>Customer Presence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Worldwide presence</fullName>
            </value>
            <value>
                <fullName>Presence in the continent</fullName>
            </value>
            <value>
                <fullName>Presence only in the country</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>