force-app/main/default/objects/Account/fields/Customer_Price__c.field-meta.xml
<CustomField>
    <fullName>Customer_Price__c</fullName>
    <description>Reaction that Customer related to prices</description>
    <label>Customer Price</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Easy</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Aggressive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>