force-app/main/default/objects/Account/fields/Customer_Quality__c.field-meta.xml
<CustomField>
    <fullName>Customer_Quality__c</fullName>
    <description>The quality is important or not to our customer</description>
    <label>Customer Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>