force-app/main/default/objects/Account/fields/Customer_Relation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Relation__c</fullName>
    <description>Relation with our customer</description>
    <label>Customer Relation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Strong</fullName>
            </value>
            <value>
                <fullName>Indiferent</fullName>
            </value>
            <value>
                <fullName>Sensitive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>