force-app/main/default/objects/Account/fields/Customer_Service__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service__c</fullName>
    <description>Reaction of customer front to service customer</description>
    <label>Customer Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sensitive</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>No Sensitive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>