force-app/main/default/objects/Account/fields/DEA__c.field-meta.xml
<CustomField>
    <fullName>DEA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DEA (Only US)</label>
    <type>Checkbox</type>
</CustomField>