force-app/main/default/objects/Account/fields/Debt_Equity__c.field-meta.xml
<CustomField>
    <fullName>Debt_Equity__c</fullName>
    <label>Debt / Equity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>