force-app/main/default/objects/Account/fields/Delivery_terms__c.field-meta.xml
<CustomField>
    <fullName>Delivery_terms__c</fullName>
    <label>Delivery terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Delivery_terms</valueSetName>
    </valueSet>
</CustomField>