force-app/main/default/objects/Account/fields/Derrame_en_camino__c.field-meta.xml
<CustomField>
    <fullName>Derrame_en_camino__c</fullName>
    <label>Derrame en camino</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>