force-app/main/default/objects/Account/fields/Derrame_en_mar_rio_o_ecosistema__c.field-meta.xml
<CustomField>
    <fullName>Derrame_en_mar_rio_o_ecosistema__c</fullName>
    <label>Derrame en mar, río o ecosistema</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>