force-app/main/default/objects/Account/fields/Desarrollo_de_Proveedores__c.field-meta.xml
<CustomField>
    <fullName>Desarrollo_de_Proveedores__c</fullName>
    <label>Desarrollo de Proveedores</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>