force-app/main/default/objects/Account/fields/Disponibilidad_de_Agua__c.field-meta.xml
<CustomField>
    <fullName>Disponibilidad_de_Agua__c</fullName>
    <label>Disponibilidad de Agua</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>