force-app/main/default/objects/Account/fields/Ecosistemas__c.field-meta.xml
<CustomField>
    <fullName>Ecosistemas__c</fullName>
    <label>Ecosistemas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>