force-app/main/default/objects/Account/fields/Educacion__c.field-meta.xml
<CustomField>
    <fullName>Educacion__c</fullName>
    <label>Educación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>