force-app/main/default/objects/Account/fields/Fecha_Ultima_Transaccion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Ultima_Transaccion__c</fullName>
    <label>Fecha Ultima Transacción</label>
    <summarizedField>Transaction__c.Date__c</summarizedField>
    <summaryFilterItems>
        <field>Transaction__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Transactions</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Transaction__c.Product_Family_ERP__c</field>
        <operation>notEqual</operation>
        <value>I2-82</value>
    </summaryFilterItems>
    <summaryForeignKey>Transaction__c.Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>