force-app/main/default/objects/Account/fields/Fecha_validez_CChEN__c.field-meta.xml
<CustomField>
    <fullName>Fecha_validez_CChEN__c</fullName>
    <label>CChEN Valid Thru</label>
    <type>Date</type>
</CustomField>