force-app/main/default/objects/Account/fields/Gestion_de_Residuos__c.field-meta.xml
<CustomField>
    <fullName>Gestion_de_Residuos__c</fullName>
    <label>Gestión de Residuos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>