force-app/main/default/objects/Account/fields/Huelga_o_toma_de_Camino__c.field-meta.xml
<CustomField>
    <fullName>Huelga_o_toma_de_Camino__c</fullName>
    <label>Huelga o toma de Camino</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>