force-app/main/default/objects/Account/fields/Impuestos_regalias_y_acuerdos_de_equidad__c.field-meta.xml
<CustomField>
    <fullName>Impuestos_regalias_y_acuerdos_de_equidad__c</fullName>
    <label>Impuestos regalias y acuerdos de equidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>