force-app/main/default/objects/Account/fields/Incendio__c.field-meta.xml
<CustomField>
    <fullName>Incendio__c</fullName>
    <label>Incendio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>