force-app/main/default/objects/Account/fields/Industry_Price__c.field-meta.xml
<CustomField>
    <fullName>Industry_Price__c</fullName>
    <description>Identify sensitive price of the company</description>
    <label>Industry Price</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sensitive</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Indiferent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>