force-app/main/default/objects/Account/fields/Infraestructura__c.field-meta.xml
<CustomField>
    <fullName>Infraestructura__c</fullName>
    <label>Infraestructura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>