force-app/main/default/objects/Account/fields/Insurance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Amount__c</fullName>
    <label>Insurance Amount</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>