force-app/main/default/objects/Account/fields/Intoxicacion_por_gases__c.field-meta.xml
<CustomField>
    <fullName>Intoxicacion_por_gases__c</fullName>
    <inlineHelpText>A trabajadores o externos</inlineHelpText>
    <label>Intoxicación por gases</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>