force-app/main/default/objects/Account/fields/Malas_condiciones_de_habitabilidad__c.field-meta.xml
<CustomField>
    <fullName>Malas_condiciones_de_habitabilidad__c</fullName>
    <label>Malas condiciones de habitabilidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>