force-app/main/default/objects/Account/fields/Necesidades_Espectativas_y_Consideracion__c.field-meta.xml
<CustomField>
    <fullName>Necesidades_Espectativas_y_Consideracion__c</fullName>
    <label>Necesidades Espectativas y Consideración</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>