force-app/main/default/objects/Account/fields/Net_Debt_Ebitda__c.field-meta.xml
<CustomField>
    <fullName>Net_Debt_Ebitda__c</fullName>
    <label>Net Debt /Ebitda</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>