force-app/main/default/objects/Account/fields/Otro__c.field-meta.xml
<CustomField>
    <fullName>Otro__c</fullName>
    <label>Otro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>