force-app/main/default/objects/Account/fields/Propiedad_y_Derecho_del_Agua__c.field-meta.xml
<CustomField>
    <fullName>Propiedad_y_Derecho_del_Agua__c</fullName>
    <label>Propiedad y Derecho del Agua</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>