force-app/main/default/objects/Account/fields/Relacionamiento__c.field-meta.xml
<CustomField>
    <fullName>Relacionamiento__c</fullName>
    <label>Relacionamiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>