force-app/main/default/objects/Account/fields/Relaciones_Publicas__c.field-meta.xml
<CustomField>
    <fullName>Relaciones_Publicas__c</fullName>
    <label>Relaciones Públicas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>