force-app/main/default/objects/Account/fields/Rotura_de_aduccion_de_agua__c.field-meta.xml
<CustomField>
    <fullName>Rotura_de_aduccion_de_agua__c</fullName>
    <label>Rotura de aducción de agua</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>