force-app/main/default/objects/Account/fields/Salud__c.field-meta.xml
<CustomField>
    <fullName>Salud__c</fullName>
    <label>Salud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>