force-app/main/default/objects/Account/fields/Seguridad__c.field-meta.xml
<CustomField>
    <fullName>Seguridad__c</fullName>
    <label>Seguridad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>