force-app/main/default/objects/Account/fields/Short_Term_Debt_Ebitda__c.field-meta.xml
<CustomField>
    <fullName>Short_Term_Debt_Ebitda__c</fullName>
    <label>Short-Term Debt / Ebitda</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>