force-app/main/default/objects/Account/fields/Socavon_con_responsabilidad_de_SQM__c.field-meta.xml
<CustomField>
    <fullName>Socavon_con_responsabilidad_de_SQM__c</fullName>
    <label>Socavón con responsabilidad de SQM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Riesgo</valueSetName>
    </valueSet>
</CustomField>