force-app/main/default/objects/Account/fields/SQM_Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>SQM_Approved_Amount__c</fullName>
    <label>SQM Approved Amount</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>