force-app/main/default/objects/Account/fields/Status_CChEN__c.field-meta.xml
<CustomField>
    <fullName>Status_CChEN__c</fullName>
    <formula>IF( CChEN_Status_Form__c &gt;= 30,
			IMAGE(&quot;https://sqmindustrial2019--c.visualforce.com/resource/1577115920000/Success?&quot;, &quot;&quot;, 30, 30),
			IF ( AND(
							CChEN_Status_Form__c &lt; 30,
							CChEN_Status_Form__c &gt; 0),
							IMAGE(&quot;https://sqmindustrial2019--c.visualforce.com/resource/1577115920000/Alert?&quot;, &quot;&quot;, 30, 30), 
							IMAGE(&quot;https://sqmindustrial2019--c.visualforce.com/resource/1577115920000/Denied?&quot;, &quot;&quot;, 30, 30))
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status CChEN</label>
    <type>Text</type>
</CustomField>