force-app/main/default/objects/Account/fields/TaxID__c.field-meta.xml
<CustomField>
    <fullName>TaxID__c</fullName>
    <label>TaxID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>