force-app/main/default/objects/Account/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <formula>VALUE(text(A1__c))  + VALUE(text(A2__c))+ VALUE(text(A3__c))+ VALUE(text(A4__c))+ 
VALUE(text(B1__c))+ VALUE(text(B2__c))+ VALUE(text(B3__c)) + VALUE(text(B4__c))+ VALUE(text(B5__c))+ VALUE(text(B6__c)) + VALUE(text(B7__c))+ VALUE(text(B8__c)) + 
VALUE(text(C1__c))+ VALUE(text(C2__c))+ VALUE(text(C3__c))+ VALUE(text(C4__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>